--- a/src/config/sql.properties
+++ b/src/config/sql.properties
@@ -19,6 +19,7 @@ grupodao.alterar=UPDATE GRUPOS SET DESCRICAO = ? WHERE ID = ?
 usuariodao.inserir=INSERT INTO PUBLIC.USUARIOS (ID, EMAIL, FLAG_ATIVO, LOGIN, NOME, SENHA, GRUPO_ID) VALUES (?, ?, ?, ?, ?, ?, ?)
 usuariodao.obter=SELECT ID, EMAIL, FLAG_ATIVO, LOGIN, NOME, SENHA, GRUPO_ID FROM PUBLIC.USUARIOS WHERE ID = ?
 usuariodao.obterPorLoginSenha=SELECT U.ID, U.EMAIL, U.FLAG_ATIVO, U.LOGIN, NOME, U.SENHA, U.GRUPO_ID FROM PUBLIC.USUARIOS U WHERE U.LOGIN = ? AND U.SENHA = ?
+usuariodao.obterPorLogin=SELECT ID, EMAIL, FLAG_ATIVO, LOGIN, UPPER(NOME) NOME, SENHA, GRUPO_ID FROM PUBLIC.USUARIOS WHERE LOGIN = ?
 usuariodao.alterar=UPDATE PUBLIC.USUARIOS SET EMAIL = ?, FLAG_ATIVO = ?, LOGIN = ?, NOME = ?, SENHA = ?, GRUPO_ID = ? WHERE ID = ?
 usuariodao.excluir=DELETE FROM PUBLIC.USUARIOS WHERE ID = ?
 
